Closed
Bug 1500690
Opened 7 years ago
Closed 7 years ago
Relax compositor thread ID assertion
Categories
(Core Graveyard :: Web Replay, defect)
Core Graveyard
Web Replay
Tracking
(firefox65 fixed)
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | fixed |
People
(Reporter: bhackett1024, Assigned: bhackett1024)
References
Details
Attachments
(1 file)
|
545 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
If the first layers update doesn't require a draw target, the compositor's thread ID won't be set and NotifyPaintComplete fails on an over-aggressive assertion.
Attachment #9018822 -
Flags: review?(nical.bugzilla)
Updated•7 years ago
|
Attachment #9018822 -
Flags: review?(nical.bugzilla) → review+
Pushed by bhackett@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5a812d8c724e
Relax compositor thread ID assertion, r=nical.
Comment 2•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•5 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•