Bug 1500690 - Relax compositor thread ID assertion, r=nical.

--HG--
extra : rebase_source : 8a45cb4265fd27ec20d56610398005ce849e1126